--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 18:17+0200\n"
+"PO-Revision-Date: 2011-08-20 18:19+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -931,6 +931,8 @@ msgid ""
 "Chose \"GeomFromText\" from the \"Function\" column and paste the below "
 "string into the \"Value\" field"
 msgstr ""
+"Vælg \"GeomFromText\" fra kolonnen \"Function\" og indsæt strengen nedenfor i "
+"feltet \"Value\""
 
 #: import.php:57
 #, php-format
