--- a/po/da.po
+++ b/po/da.po
@@ -914,7 +914,7 @@ msgstr "Tilføj en indre ring"
 
 #: gis_data_editor.php:262 js/messages.php:288
 msgid "Polygon"
-msgstr ""
+msgstr "Polygon"
 
 #: gis_data_editor.php:300 js/messages.php:294
 #| msgid "Add column"
