--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 18:20+0200\n"
+"PO-Revision-Date: 2011-08-20 18:21+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -1212,10 +1212,9 @@ msgid "Query statistics"
 msgstr "Statistik over forespørgsler"
 
 #: js/messages.php:93
-#, fuzzy
 #| msgid "Failed to read configuration file"
 msgid "Local monitor configuration incompatible"
-msgstr "Kunne ikke indlæse konfigurationsfilen"
+msgstr "Konfigurationen for den lokale skærm er inkompatibel"
 
 #: js/messages.php:94
 msgid ""
