--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 18:21+0200\n"
+"PO-Revision-Date: 2011-08-20 18:24+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -1223,6 +1223,10 @@ msgid ""
 "likely that your current configuration will not work anymore. Please reset "
 "your configuration to default in the <i>Settings</i> menu."
 msgstr ""
+"Konfigurationen af diagramopstillingen i din browsers lokale lager er ikke "
+"længere kompatibel med den nyere version af skærmdialogen. Det er meget "
+"sandsynligt, at din aktuelle konfiguration ikke vil virke længere.Nulstil "
+"derfor din konfiguration i menuen <i>Settings</>"
 
 #: js/messages.php:96
 #, fuzzy
