--- a/po/da.po
+++ b/po/da.po
@@ -1290,10 +1290,9 @@ msgid "Free memory"
 msgstr "Ledig hukommelse"
 
 #: js/messages.php:111
-#, fuzzy
 #| msgid "System memory"
 msgid "Used memory"
-msgstr "Systemhukommelse"
+msgstr "Forbrugt hukommelse"
 
 #: js/messages.php:113
 #, fuzzy
