--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 18:32+0200\n"
+"PO-Revision-Date: 2011-08-20 18:33+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -1236,7 +1236,7 @@ msgstr "Effektivitet af forespørgsels-mellemlager"
 #: js/messages.php:97 po/advisory_rules.php:70
 #| msgid "Query cache"
 msgid "Query cache usage"
-msgstr "Forespørgsels-cache forbrug"
+msgstr "Forbrug af forespørgsels-mellemlager"
 
 #: js/messages.php:98
 #| msgid "Query cache"
