--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 18:33+0200\n"
+"PO-Revision-Date: 2011-08-20 18:34+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -1282,7 +1282,7 @@ msgstr "Hukommelse i mellemlager"
 #: js/messages.php:109
 #| msgid "Buffer Pool"
 msgid "Buffered memory"
-msgstr "Buffer hukommelse"
+msgstr "Hukommelse i buffer"
 
 #: js/messages.php:110
 #| msgid "System memory"
