--- a/po/da.po
+++ b/po/da.po
@@ -1568,6 +1568,10 @@ msgid ""
 "This is most likely because your session expired. Reloading the page and "
 "reentering your credentials should help."
 msgstr ""
+"Serveren returnerede et ugyldigt svar mens der blev anmodet om nye "
+"diagramdata. Dette er sandsynligvis fordi din session er udløbet. "
+"Genindlæsning af siden og genindtastning af dine legitimationsoplysninger "
+"burde hjælpe."
 
 #: js/messages.php:184
 #, fuzzy
