--- a/po/da.po
+++ b/po/da.po
@@ -1593,6 +1593,8 @@ msgid ""
 "Failed building chart grid with imported config. Resetting to default "
 "config..."
 msgstr ""
+"Kunne ikke bygge diagramgitter med den importerede konfiguration. Nulstiller "
+"til standard konfiguration..."
 
 #: js/messages.php:190 libraries/config/messages.inc.php:170
 #: libraries/db_links.inc.php:83 libraries/server_links.inc.php:69
