--- a/po/da.po
+++ b/po/da.po
@@ -1619,7 +1619,7 @@ msgstr "Mulige ydelsesmæssige problemer"
 
 #: js/messages.php:198
 msgid "Issue"
-msgstr ""
+msgstr "Problem"
 
 #: js/messages.php:199
 #, fuzzy
