--- a/po/da.po
+++ b/po/da.po
@@ -1629,7 +1629,7 @@ msgstr "Anbefaling"
 #: js/messages.php:200
 #| msgid "Details"
 msgid "Rule details"
-msgstr "Regel-detaljer"
+msgstr "Regeldetaljer"
 
 #: js/messages.php:201
 #, fuzzy
