Translation update done using Pootle.

--- a/po/da.po
+++ b/po/da.po
@@ -1642,7 +1642,7 @@ msgstr "Brugt variabel/formel"
 
 #: js/messages.php:203
 msgid "Test"
-msgstr ""
+msgstr "Test"
 
 #: js/messages.php:208 libraries/tbl_properties.inc.php:763
 #: pmd_general.php:388 pmd_general.php:425 pmd_general.php:545
