--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 18:49+0200\n"
+"PO-Revision-Date: 2011-08-20 18:50+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -1878,7 +1878,7 @@ msgstr "Tilføj mulighed for kolonne"
 
 #: js/messages.php:310
 msgid "Press escape to cancel editing"
-msgstr ""
+msgstr "Tryk på ESC for at annullere redigeringen."
 
 #: js/messages.php:311
 msgid ""
