Translation update done using Pootle.

--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 18:51+0200\n"
+"PO-Revision-Date: 2011-08-20 18:57+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -1909,6 +1909,9 @@ msgid ""
 "This table does not contain a unique column. Features related to the grid "
 "edit, checkbox, Edit, Copy and Delete links may not work after saving."
 msgstr ""
+"Denne tabel indeholder ikke en unik kolonne. Funktioner relateret til "
+"redigering af gitter, afkrydsningsboks og links til redigering, kopiering og "
+"sletning fungerer måske ikke, efter at data er gemt. "
 
 #: js/messages.php:318
 msgid ""
