Translation update done using Pootle.

--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 18:59+0200\n"
+"PO-Revision-Date: 2011-08-20 19:00+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -2210,7 +2210,7 @@ msgstr "Sekund"
 #: libraries/Advisor.class.php:145
 #, php-format
 msgid "Failed formatting string for rule '%s'. PHP threw following error: %s"
-msgstr ""
+msgstr "Fejlende formatteringsstreng for regel '%s'. PHP gav følgende fejl: %s"
 
 #: libraries/Config.class.php:1159
 msgid "Font size"
