--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 19:00+0200\n"
+"PO-Revision-Date: 2011-08-20 19:01+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -2587,10 +2587,9 @@ msgid "PBMS get BLOB info failed:"
 msgstr "PBMS hent BLOB info mislykkedes:"
 
 #: libraries/blobstreaming.lib.php:337
-#, fuzzy
 #| msgid "get BLOB Content-Type failed"
 msgid "PBMS get BLOB Content-Type failed"
-msgstr "hent BLOB Content-Type mislykkedes"
+msgstr "PBMS hent BLOB Content-Type mislykkedes"
 
 #: libraries/blobstreaming.lib.php:363
 msgid "View image"
