--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 19:01+0200\n"
+"PO-Revision-Date: 2011-08-20 19:02+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -4256,10 +4256,9 @@ msgid "Memory limit"
 msgstr "Hukommelsesgrænse"
 
 #: libraries/config/messages.inc.php:319
-#, fuzzy
 #| msgid "These are Edit, Inline edit, Copy and Delete links"
 msgid "These are Edit, Copy and Delete links"
-msgstr "Dette er Ret, Ret linje, Kopi og Slet links"
+msgstr "Dette er Ret, Kopi og Slet links"
 
 #: libraries/config/messages.inc.php:320
 msgid "Where to show the table row links"
