Translation update done using Pootle.

--- a/po/da.po
+++ b/po/da.po
@@ -4414,7 +4414,7 @@ msgstr "Vis hjælpeknap"
 
 #: libraries/config/messages.inc.php:357
 msgid "Save all edited cells at once"
-msgstr ""
+msgstr "Gem alle redigerede celler med det samme"
 
 #: libraries/config/messages.inc.php:358
 msgid "Directory where exports can be saved on server"
