--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 19:03+0200\n"
+"PO-Revision-Date: 2011-08-20 19:04+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -4950,10 +4950,9 @@ msgid "Show function fields"
 msgstr "Vis funktionsfelter"
 
 #: libraries/config/messages.inc.php:462
-#, fuzzy
 #| msgid "Where to show the table row links"
 msgid "Whether to show hint or not"
-msgstr "Hvor links til tablerækker skal vises"
+msgstr "Om hints skal vises eller ej"
 
 #: libraries/config/messages.inc.php:463
 #, fuzzy
