--- a/po/da.po
+++ b/po/da.po
@@ -6643,10 +6643,10 @@ msgid "Go to database"
 msgstr "Gå til database"
 
 #: libraries/import.lib.php:1103 libraries/import.lib.php:1126
-#, fuzzy, php-format
+#, php-format
 #| msgid "Missing data for %s"
 msgid "Edit settings for %s"
-msgstr "Manglende data for %s"
+msgstr "Rediger indstillinger for %s"
 
 #: libraries/import.lib.php:1121
 msgid "Go to table"
