Translation update done using Pootle.

--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 19:06+0200\n"
+"PO-Revision-Date: 2011-08-20 19:07+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -6749,6 +6749,8 @@ msgid ""
 "You tried to import an invalid file or the imported file contains invalid "
 "data"
 msgstr ""
+"Du prøvede på at importere en invalid fil eller den importerede fil "
+"indeholder invalide data"
 
 #: libraries/import/shp.php:312
 #, php-format
