--- a/po/da.po
+++ b/po/da.po
@@ -6755,7 +6755,7 @@ msgstr ""
 #: libraries/import/shp.php:312
 #, php-format
 msgid "MySQL Spatial Extension does not support ESRI type \"%s\"."
-msgstr ""
+msgstr "MySQL Spatial Extension understøtter ikke ESRI type \"%s\"."
 
 #: libraries/import/shp.php:350
 #, fuzzy
