--- a/po/da.po
+++ b/po/da.po
@@ -8082,10 +8082,9 @@ msgid "Operator"
 msgstr "Operatør"
 
 #: libraries/tbl_select.lib.php:143
-#, fuzzy
 #| msgid "Search"
 msgid "Table Search"
-msgstr "Søg"
+msgstr "Tabelsøgning"
 
 #: libraries/tbl_select.lib.php:229 tbl_change.php:994
 #, fuzzy
