Translation update done using Pootle.

--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 19:11+0200\n"
+"PO-Revision-Date: 2011-08-20 19:13+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -9540,6 +9540,9 @@ msgid ""
 "changing (by reading the documentation) and how to undo the change. Wrong "
 "tuning can have a very negative effect on performance."
 msgstr ""
+"Før konfigurationen ændres, så vær sikker på, hvad du ændrer (ved at læse "
+"dokumentationen) og hvordan du annullerer ændringer. Forkert tuning kan have "
+"en meget negativ effekt på ydeevnen."
 
 #: server_status.php:814
 msgid ""
