Translation update done using Pootle.

--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 19:16+0200\n"
+"PO-Revision-Date: 2011-08-20 19:17+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -10415,7 +10415,6 @@ msgid "Using the monitor:"
 msgstr "Brug af monitor:"
 
 #: server_status.php:1510
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/>\n"
 #| "        Ok, you are good to go! Once you click 'Start monitor' your "
@@ -10434,16 +10433,10 @@ msgid ""
 "change the refresh rate under 'Settings', or remove any chart using the cog "
 "icon on each respective chart."
 msgstr ""
-"<b>Brug af monitoren:</b><br/>\n"
 "         Når du klikker på 'Start monitor' vil din browser opdatere alle "
-"viste diagrammer regelmæssigt.\n"
-"         Du kan tilføje diagrammer og ændre opdateringsfrekvensen under "
-"'Indstilinger' eller fjerne diagrammer\n"
-" ved at bruge ikonet cog på det relevante diagram.\n"
-"        <p>Når du ser en pludselig forøgelse i aktivitet, så vælg det "
-"relevante tidsinterval på et diagram ved at holde venstre museknap\n"
-"         nede og køre hen over diagrammet. Dette vill hente statistik fra "
-"logs og hjælpe dig til at finde årsagen.</p> til aktivitetsforøgelsen.</p>"
+"viste diagrammer regelmæssigt.         Du kan tilføje diagrammer og ændre "
+"opdateringsfrekvensen under 'Indstilinger' eller fjerne diagrammer ved at "
+"bruge ikonet cog på det relevante diagram.        "
 
 #: server_status.php:1512
 #, fuzzy
