Translation update done using Pootle.

--- a/po/da.po
+++ b/po/da.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 19:18+0200\n"
+"PO-Revision-Date: 2011-08-20 19:19+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
 "Language: da\n"
@@ -10474,7 +10474,6 @@ msgid "Please note:"
 msgstr "Bemærk venligst:"
 
 #: server_status.php:1521
-#, fuzzy
 #| msgid ""
 #| "<b>Please note:</b>\n"
 #| "        Enabling the general_log may increase the server load by 5-15%. "
@@ -10489,13 +10488,10 @@ msgid ""
 "it is advisable to select only a small time span and to disable the "
 "general_log and empty its table once monitoring is not required any more."
 msgstr ""
-"<b>Bemærk:\n"
-"        Aktivering af general_log kan forøge server load med 5-15%. Vær også "
-"opmærksom på, at statistikgenerering fra logs er en\n"
-"        krævende opgave, så det tilrådes at vælge kun en lille tidsinterval "
-"og at deaktivere general_log og tømme dens tabel, når\n"
-"        der ikke er behov for den længere.\n"
-" "
+"Aktivering af general_log kan forøge server load med 5-15%. Vær også "
+"opmærksom på, at statistikgenerering fra logs er en krævende opgave, så det "
+"tilrådes at vælge kun en lille tidsinterval og at deaktivere general_log og "
+"tømme dens tabel, når der ikke er behov for den længere. "
 
 #: server_status.php:1533
 #, fuzzy
