--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 22:32+0200\n"
+"PO-Revision-Date: 2011-08-20 22:42+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12462,6 +12462,8 @@ msgstr ""
 #, php-format
 msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
+"Şimdiye kadar kullanılan en fazla %% MyISAM anahtar arabelleği: %s, bu değer "
+"%%95'in üzerinde olmalıdır"
 
 #: po/advisory_rules.php:165
 msgid "Percentage of MyISAM key buffer used"
