Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 22:43+0200\n"
+"PO-Revision-Date: 2011-08-20 22:44+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12479,7 +12479,7 @@ msgstr ""
 
 #: po/advisory_rules.php:170
 msgid "Percentage of index reads from memory"
-msgstr ""
+msgstr "Bellekten indeks okumaları yüzdesi"
 
 #: po/advisory_rules.php:171
 #, php-format
