--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 22:44+0200\n"
+"PO-Revision-Date: 2011-08-20 22:45+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12484,7 +12484,7 @@ msgstr "Bellekten indeks okumaları yüzdesi"
 #: po/advisory_rules.php:171
 #, php-format
 msgid "The %% of indexes that use the MyISAM key buffer is low."
-msgstr ""
+msgstr "MyISAM anahtar arabelleği kullanan indekslerin %% düşük."
 
 #: po/advisory_rules.php:172
 msgid "You may need to increase {key_buffer_size}."
