Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 22:45+0200\n"
+"PO-Revision-Date: 2011-08-20 22:46+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12488,7 +12488,7 @@ msgstr "MyISAM anahtar arabelleği kullanan indekslerin %% düşük."
 
 #: po/advisory_rules.php:172
 msgid "You may need to increase {key_buffer_size}."
-msgstr ""
+msgstr "{key_buffer_size} değerini arttırmanız gerekebilir."
 
 #: po/advisory_rules.php:173
 #, php-format
