--- a/po/tr.po
+++ b/po/tr.po
@@ -12508,7 +12508,7 @@ msgid ""
 "Opening tables requires disk I/O which is costly. Increasing "
 "{table_open_cache} might avoid this."
 msgstr ""
-"Açık tablolar pahalı disk G/Ç gerektirir. {table_open_cache} değerini "
+"Açılan tablolar pahalı disk G/Ç gerektirir. {table_open_cache} değerini "
 "arttırmak bunu önleyebilir."
 
 #: po/advisory_rules.php:178
