--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 22:49+0200\n"
+"PO-Revision-Date: 2011-08-20 22:50+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12514,7 +12514,7 @@ msgstr ""
 #: po/advisory_rules.php:178
 #, php-format
 msgid "Opened table rate: %s, this value should be less than 10 per hour"
-msgstr ""
+msgstr "Açık tablo oranı: %s, bu değer saat başına 10'dan az olmalıdır"
 
 #: po/advisory_rules.php:180
 msgid "Percentage of used open files limit"
