--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 22:50+0200\n"
+"PO-Revision-Date: 2011-08-20 22:53+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12525,6 +12525,8 @@ msgid ""
 "The number of open files is approaching the max number of open files.  You "
 "may get a \\\"Too many open files\\\" error."
 msgstr ""
+"Açık dosyaların sayısı en fazla açık dosyaların sayısına yaklaşıyor. \\\"Çok "
+"fazla dosya açık\\\" hatası alabilirsiniz."
 
 #: po/advisory_rules.php:182 po/advisory_rules.php:187
 msgid ""
